--- a/01_data_preprocessing_tools.ipynb
+++ b/01_data_preprocessing_tools.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "01.data_preprocessing_tools",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPRL+ODXNcrl5KhC/DZi2Pi",
+      "mount_file_id": "https://github.com/kvneswar/machine-learning-a-z/blob/main/01_data_preprocessing_tools.ipynb",
+      "authorship_tag": "ABX9TyMXaL0Sn68CPsjEuiPiYLGy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,10 +75,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F0-jPWDW73-Y",
-        "outputId": "c25b9a65-5d9d-4c37-fd8c-1dfab7dc9d1f"
+        "outputId": "e4588177-5cad-4f15-a383-1fd93bc4be7f"
       },
       "source": [
-        "dataset = pd.read_csv('Data.csv')\n",
+        "dataset = pd.read_csv('/content/drive/MyDrive/Machine Learning/Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/Data.csv')\n",
         "\n",
         "x = dataset.iloc[:, :-1].values\n",
         "y = dataset.iloc[:, -1].values\n",
@@ -86,7 +86,7 @@
         "print (x)\n",
         "print (y)"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,6 +115,161 @@
       "source": [
         "Taking care of missing data"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "scrUP4WyMFsU",
+        "outputId": "ccd50071-55b4-4a5a-9990-6cc39854b460",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "imputer = SimpleImputer(missing_values = np.nan, strategy = 'mean')\n",
+        "\n",
+        "imputer.fit(x[:, 1:3])\n",
+        "\n",
+        "x[:, 1:3] = imputer.transform(x[:, 1:3])\n",
+        "\n",
+        "print(x)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[['France' 44.0 72000.0]\n",
+            " ['Spain' 27.0 48000.0]\n",
+            " ['Germany' 30.0 54000.0]\n",
+            " ['Spain' 38.0 61000.0]\n",
+            " ['Germany' 40.0 63777.77777777778]\n",
+            " ['France' 35.0 58000.0]\n",
+            " ['Spain' 38.77777777777778 52000.0]\n",
+            " ['France' 48.0 79000.0]\n",
+            " ['Germany' 50.0 83000.0]\n",
+            " ['France' 37.0 67000.0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c9s1tGwURu9_"
+      },
+      "source": [
+        "Encoding Categorial Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cUPUdihKVGul"
+      },
+      "source": [
+        "Encoding independent variable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PyzjDbLNR0Pw",
+        "outputId": "fe8b4d6e-f239-4bcd-f008-30eba22819b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "ct = ColumnTransformer(transformers = [('encoder', OneHotEncoder(), [0])], remainder = 'passthrough')\n",
+        "\n",
+        "x = np.array(ct.fit_transform(x))\n",
+        "\n",
+        "print(x)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1.0 0.0 0.0 44.0 72000.0]\n",
+            " [0.0 0.0 1.0 27.0 48000.0]\n",
+            " [0.0 1.0 0.0 30.0 54000.0]\n",
+            " [0.0 0.0 1.0 38.0 61000.0]\n",
+            " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+            " [1.0 0.0 0.0 35.0 58000.0]\n",
+            " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+            " [1.0 0.0 0.0 48.0 79000.0]\n",
+            " [0.0 1.0 0.0 50.0 83000.0]\n",
+            " [1.0 0.0 0.0 37.0 67000.0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1OgYhhtIVAVf"
+      },
+      "source": [
+        "Encoding dependent variable"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WacPhQJ5VJRA",
+        "outputId": "ceb746d4-4230-4731-fb02-c3f376f092e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "\n",
+        "y = le.fit_transform(y)\n",
+        "\n",
+        "print(y)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 0 0 1 1 0 1 0 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l89elAn-XRAY"
+      },
+      "source": [
+        "Splitting the dataset into Training set and Test set"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SNtDVNidXXJ-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
