--- a/01_data_preprocessing_tools.ipynb
+++ b/01_data_preprocessing_tools.ipynb
@@ -6,7 +6,7 @@
       "name": "01.data_preprocessing_tools",
       "provenance": [],
       "mount_file_id": "https://github.com/kvneswar/machine-learning-a-z/blob/main/01_data_preprocessing_tools.ipynb",
-      "authorship_tag": "ABX9TyMXaL0Sn68CPsjEuiPiYLGy",
+      "authorship_tag": "ABX9TyOTGIJxC2+PAuMV+J+3NwOz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,22 +75,43 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F0-jPWDW73-Y",
-        "outputId": "e4588177-5cad-4f15-a383-1fd93bc4be7f"
+        "outputId": "a65f3be2-4e7d-4d82-c58f-2ba467bfc968"
       },
       "source": [
-        "dataset = pd.read_csv('/content/drive/MyDrive/Machine Learning/Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/Data.csv')\n",
+        "dataset = pd.read_csv('/content/drive/MyDrive/Career/ML/MachineLearning A-Z/Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/Python/Data.csv')\n",
+        "\n",
+        "print('ORIGINAL DATASET:')\n",
+        "print(dataset)\n",
+        "\n",
+        "print('x: ')\n",
         "\n",
         "x = dataset.iloc[:, :-1].values\n",
+        "print (x)\n",
+        "\n",
+        "print('y: ')\n",
         "y = dataset.iloc[:, -1].values\n",
         "\n",
-        "print (x)\n",
-        "print (y)"
+        "print (y)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "ORIGINAL DATASET:\n",
+            "   Country   Age   Salary Purchased\n",
+            "0   France  44.0  72000.0        No\n",
+            "1    Spain  27.0  48000.0       Yes\n",
+            "2  Germany  30.0  54000.0        No\n",
+            "3    Spain  38.0  61000.0        No\n",
+            "4  Germany  40.0      NaN       Yes\n",
+            "5   France  35.0  58000.0       Yes\n",
+            "6    Spain   NaN  52000.0        No\n",
+            "7   France  48.0  79000.0       Yes\n",
+            "8  Germany  50.0  83000.0        No\n",
+            "9   France  37.0  67000.0       Yes\n",
+            "x: \n",
             "[['France' 44.0 72000.0]\n",
             " ['Spain' 27.0 48000.0]\n",
             " ['Germany' 30.0 54000.0]\n",
@@ -101,9 +122,9 @@
             " ['France' 48.0 79000.0]\n",
             " ['Germany' 50.0 83000.0]\n",
             " ['France' 37.0 67000.0]]\n",
+            "y: \n",
             "['No' 'Yes' 'No' 'No' 'Yes' 'Yes' 'No' 'Yes' 'No' 'Yes']\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -120,12 +141,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "scrUP4WyMFsU",
-        "outputId": "ccd50071-55b4-4a5a-9990-6cc39854b460",
+        "outputId": "ee7aab9c-f6b5-4e6b-a334-d0a440cc245b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
+        "#dataset['Age'] = dataset['Age'].fillna(round(np.mean(pd.to_numeric(dataset['Age'])), 2))\n",
+        "#dataset['Salary'] = dataset['Salary'].fillna(round(np.mean(pd.to_numeric(dataset['Salary'])), 2))\n",
+        "\n",
         "from sklearn.impute import SimpleImputer\n",
         "\n",
         "imputer = SimpleImputer(missing_values = np.nan, strategy = 'mean')\n",
@@ -136,10 +160,11 @@
         "\n",
         "print(x)"
       ],
-      "execution_count": 4,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[['France' 44.0 72000.0]\n",
             " ['Spain' 27.0 48000.0]\n",
@@ -151,8 +176,7 @@
             " ['France' 48.0 79000.0]\n",
             " ['Germany' 50.0 83000.0]\n",
             " ['France' 37.0 67000.0]]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -193,7 +217,7 @@
         "\n",
         "print(x)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,7 +264,7 @@
         "\n",
         "print(y)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,9 +289,7 @@
       "metadata": {
         "id": "SNtDVNidXXJ-"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
